# vector_ap_bsw

./: README.md
amsr-vector-app-example-calculator/src/client/: CMakeLists.txt  calculator_client.cc
amsr-vector-app-example-calculator/src/server/: CMakeLists.txt  calculator_main.cc
amsr-vector-app-example-rest/: CMakeLists.txt  ChangeHistory.txt  README.md
amsr-vector-app-example-rest/model/: run-amsrgen.sh
amsr-vector-app-example-rest/model/arxml/: ApplicationDesign-Client.arxml  ApplicationDesign-Interface.arxml  ApplicationDesign-Server.arxml  ApplicationManifest-Client.arxml  ApplicationManifest-Server.arxml  ApplicationManifest.arxml  MachineManifest-Client.arxml  MachineManifest-Server.arxml  MachineManifest.arxml  PlatformTypes_AR4.arxml  Serialization.arxml  ServiceInstanceManifest-Client.arxml  ServiceInstanceManifest-Interface.arxml  ServiceInstanceManifest-Server.arxml
amsr-vector-app-example-rest/src/: CMakeLists.txt
amsr-vector-app-example-rest/src/client/: CMakeLists.txt  main.cc
amsr-vector-app-example-rest/src/clientevent/: CMakeLists.txt  main.cc
amsr-vector-app-example-rest/src/include/: opt_parser.h
amsr-vector-app-example-rest/src/qnxdummylib/: CMakeLists.txt  dummy.cc
amsr-vector-app-example-rest/src/server/: CMakeLists.txt  main.cc
amsr-vector-app-example-rest/src/serverevent/: CMakeLists.txt  main.cc
amsr-vector-fs-communicationmiddleware-rest/: CMakeLists.txt  ChangeHistory.txt
amsr-vector-fs-communicationmiddleware-rest/cmake/: AraRestConfig.cmake.in
amsr-vector-fs-communicationmiddleware-rest/doc/: CMakeLists.txt
amsr-vector-fs-communicationmiddleware-rest/etc/: configuration.json
amsr-vector-fs-communicationmiddleware-rest/lib/AraRest/: CMakeLists.txt
amsr-vector-fs-communicationmiddleware/lib/libARA/: CMakeLists.txt
amsr-vector-fs-communicationmiddleware/src/someipd-posix/: CMakeLists.txt  main.cc
amsr-vector-fs-dm-diagnosticmanager/: CMakeLists.txt  ChangeHistory.txt  README.md
amsr-vector-fs-dm-diagnosticmanager/cmake/: DMConfig.cmake.in
amsr-vector-fs-dm-diagnosticmanager/etc/: DoIPConfig.json  MetaConfig.json  application-gen.json  application.json  dext1.json  genericParameters.json  manifest.json  someipd-posix.json
amsr-vector-fs-dm-diagnosticmanager/generator/: build.gradle  dvCfgGenDevKitBootstrap.gradle  projectConfig.gradle  settings.gradle
amsr-vector-fs-dm-diagnosticmanager/generator/amsrgen_dm_vector/: build.gradle  justification_findbugs.xml
amsr-vector-fs-dm-diagnosticmanager/lib/libDM/: CMakeLists.txt
amsr-vector-fs-dm-diagnosticmanager/lib/libDoIP/: CMakeLists.txt
amsr-vector-fs-dm-diagnosticmanager/scripts/: adapt-generated-sources.sh  generate-sources.sh  run-lint.sh
amsr-vector-fs-dm-diagnosticmanager/src/: CMakeLists.txt  arguments_parser.cc  arguments_parser.h  main.cc  runtime.cc  runtime.h
amsr-vector-fs-dm-diagnosticmanager/src/configuration/: dext_configuration.cc  dext_configuration.h  diagnostic_configuration.cc  diagnostic_configuration.h  generic_configuration.cc  generic_configuration.h
amsr-vector-fs-dm-diagnosticmanager/src/diagpreconditions/: diag_preconditions.cc  diag_preconditions.h  diag_state_precondition.cc  diag_state_precondition.h
amsr-vector-fs-dm-diagnosticmanager/src/server/: diagnostic_server.cc  diagnostic_server.h  diagnostic_server_configuration.cc  diagnostic_server_configuration.h  session_id.h  session_info.h
amsr-vector-fs-dm-diagnosticmanager/src/udstransport/: protocol_manager_with_conversation_manager_handling.h  uds_message_helper.cc  uds_message_helper.h  uds_transport_protocol_manager_impl.cc  uds_transport_protocol_manager_impl.h
amsr-vector-fs-dm-diagnosticmanager/src/utility/: string_helper.cc  string_helper.h
amsr-vector-fs-em-executionmanager/src/: CMakeLists.txt
amsr-vector-fs-libosabstraction/: CMakeLists.txt  README.md
amsr-vector-fs-libosabstraction/cmake/: osabstractionConfig.cmake.in
amsr-vector-fs-libosabstraction/lib/: CMakeLists.txt
amsr-vector-fs-libosabstraction/lib/libosabstraction-gmock/: CMakeLists.txt
amsr-vector-fs-libvac/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  vacConfig.cmake  vacTargets.cmake
amsr-vector-fs-per-libpersistency/lib/persistency/: CMakeLists.txt  Makefile  cmake_install.cmake  persistencyConfig.cmake  persistencyTargets.cmake
communicationmiddlleware/: CMakeLists.txt  README.md
communicationmiddlleware/cmake/: ARAConfig.cmake.in  SomeIP-posix-commonConfig.cmake.in  SomeIP-posixConfig.cmake.in
communicationmiddlleware/doc/: CMakeLists.txt  Makefile  cmake_install.cmake
communicationmiddlleware/etc/: manifest.json
communicationmiddlleware/lib/libARA/: Makefile  cmake_install.cmake
communicationmiddlleware/lib/libARA-SomeIP-posix/: CMakeLists.txt  Makefile  cmake_install.cmake
communicationmiddlleware/lib/libSomeIP-posix/: CMakeLists.txt  Makefile  cmake_install.cmake
communicationmiddlleware/lib/libSomeIP-posix-common/: CMakeLists.txt  Makefile  cmake_install.cmake
communicationmiddlleware/src/someipd-posix/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  someipd-posix
em/: CMakeLists.txt  ChangeHistory.txt  README.md
em/addon/amsr-vector-fs-em-executionmanager-demo-application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
em/addon/amsr-vector-fs-em-executionmanager-restart-application/: CMakeLists.txt  run.cc
em/addon/amsr-vector-fs-em-executionmanager-shutdown-application/: CMakeCache.txt  Makefile  amsr-vector-fs-em-executionmanager-shutdown-application  cmake_install.cmake
em/etc/: machine_manifest.json  machine_manifest_schema.json
em/lib/ApplicationClient/: CMakeCache.txt  CMakeLists.txt
em/src/: main.cc
files/app-example-calculator/: .README.txt.swp  CMakeLists.txt  README.txt
files/app-example-calculator/model/: run-amsrgen.sh
libvac/: CMakeLists.txt  README.md
libvac/cmake/: vacConfig.cmake.in
libvac/doc/: CMakeLists.txt  Makefile  cmake_install.cmake
libvac/lib/: Makefile  cmake_install.cmake  vacConfig.cmake  vacTargets.cmake
libvac/vcast/: LIBVAC_PROFILES.csh  LIBVAC_PROFILES.env
(+1165 files in other folders)
